# Deep-Feedforward-Network-From-Scratch-in-Cpp

./: .gitignore  CMakeLists.txt  README.md
examples/src/: main.cpp
lib/include/: FNN.h  Matrix.h  activation.h
lib/src/: FNN.cpp  Matrix.cpp
